crates/keron-lang/tests/corpus/errors/check/match_duplicate_neg_zero_arm.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unreachable `match` arm: duplicate literal pattern
  --> 4:5
  |
4 |     -0.0 => 2,
  |     ^^^^
